src/objects/loan__Loan_Account_Interface__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>loan__ACH_Account_Number__c</fullName>
        <description>Account number</description>
        <inlineHelpText>Account number</inlineHelpText>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Account_Type__c</fullName>
        <description>Account type: Saving or checking</description>
        <label>ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Bank_Name__c</fullName>
        <description>Bank name</description>
        <inlineHelpText>Bank name</inlineHelpText>
        <label>ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACH Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Debit_Amount__c</fullName>
        <description>Debit amount</description>
        <inlineHelpText>Debit amount</inlineHelpText>
        <label>ACH Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__ACH_End_Date__c</fullName>
        <label>ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Frequency__c</fullName>
        <label>ACH Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Next_Debit_Date__c</fullName>
        <label>ACH Next Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ACH_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is ACH on for this account</description>
        <inlineHelpText>Is ACH on for this account</inlineHelpText>
        <label>ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Routing_Number__c</fullName>
        <description>Routing number</description>
        <inlineHelpText>Routing number</inlineHelpText>
        <label>ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Start_Date__c</fullName>
        <label>ACH Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Date__c</fullName>
        <description>Date from the interest accrual will start</description>
        <label>Accrual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Days__c</fullName>
        <description>Accrual Start Days after the loan effective date.</description>
        <label>Accrual Start Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Ach_Debit_Day__c</fullName>
        <description>Debit day for ACH payment</description>
        <inlineHelpText>Ach Debit Day</inlineHelpText>
        <label>Ach Debit Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Balloon_Payment__c</fullName>
        <inlineHelpText>Balloon Payment Amount on the Loan Account.</inlineHelpText>
        <label>Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Branch_Name__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Loan Account Interfaces</relationshipLabel>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Account Interfaces</relationshipLabel>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Due_Day__c</fullName>
        <label>Contractual Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Interest_Rate__c</fullName>
        <label>Contractual Interest Rate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Maturity_Date__c</fullName>
        <label>Contractual Maturity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Contractual_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contractual Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Loan Account Interfaces</relationshipLabel>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Delinquency_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delinquency Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Delinquent_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Disbursal_Date__c</fullName>
        <description>This date is used as a Loan Start Date to generate the repayment schedule. The user can fill this field at the beginning of the loan to project when loan is disbursed; but this field can be updated anytime before disbursement.</description>
        <inlineHelpText>This date is used as a Loan Start Date to generate the repayment schedule. The user can fill this field at the beginning of the loan to project when loan is disbursed; but this field can be updated anytime before disbursement.</inlineHelpText>
        <label>Contract Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Day for the loan account.</description>
        <label>Due Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Excess__c</fullName>
        <label>Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Set__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Fee Set</inlineHelpText>
        <label>Fee Set</label>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipLabel>Loan Account Interfaces</relationshipLabel>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Paid</description>
        <inlineHelpText>Fees Paid</inlineHelpText>
        <label>Fees Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Remaining</description>
        <inlineHelpText>Fees Remaining</inlineHelpText>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
        <label>Frequency of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SinglePmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Grace_Period_for_Repayments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>E.g. If Grace period is 10 days and payment doesn&apos;t come of due date, following things will happen
-Interest will still accrue
-Overdue Interest (Penalty - interest on OP, OI and OF) will not accrue. However, if payment doesn&apos;t come at all, on 11th day, overdue interest for all 11 days will be accrued.
-Overdue components will be non-zero but the account status will not be delinquent</description>
        <inlineHelpText>E.g. If Grace period is 10 days and payment doesn&apos;t come of due date, following things will happen
-Interest will still accrue
-Overdue Interest (Penalty - interest on OP, OI and OF) will not accrue.
-status will not be delinquent</inlineHelpText>
        <label>Late Charge Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Id__c</fullName>
        <externalId>true</externalId>
        <label>Incoming Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Interest_Calculation_Method__c</fullName>
        <description>Interest Calculation Method</description>
        <inlineHelpText>Interest Calculation Method</inlineHelpText>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declining Balance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Only_Period__c</fullName>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Paid
Account Balance Details- System calculated Uneditable fields</description>
        <inlineHelpText>Interest Paid
Account Balance Details- System calculated Uneditable fields</inlineHelpText>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate_Last__c</fullName>
        <description>Last Interest Rate</description>
        <label>Last Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <description>Interest Rate</description>
        <inlineHelpText>Interest Rate</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortization_Calculation_Method__c</fullName>
        <label>Amortization Method</label>
        <picklist>
            <picklistValues>
                <fullName>Interest Bearing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortization_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortization_Frequency__c</fullName>
        <label>Amortization Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortized_Balance_Type__c</fullName>
        <label>Amortize Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__LA_Next_Amortization_Date__c</fullName>
        <label>Next Amortization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Accrual_Date__c</fullName>
        <description>Last accrual Date on loan account</description>
        <label>Last Accrual Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Due_Date__c</fullName>
        <label>Last Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Product Name</description>
        <inlineHelpText>Loan Product Name</inlineHelpText>
        <label>Product Name</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Bad Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Obligations met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- Written Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Maturity_Date_Current__c</fullName>
        <label>Current Maturity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Migration_Date__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Due_Date__c</fullName>
        <label>Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Next_Due_Generation_Date__c</fullName>
        <description>Next Due Generation Date.</description>
        <label>Next Due Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Days_Overdue__c</fullName>
        <inlineHelpText>Number of delinquency days.</inlineHelpText>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Number__c</fullName>
        <description>One time ACH account number</description>
        <inlineHelpText>One time ACH account number</inlineHelpText>
        <label>OT ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Type__c</fullName>
        <description>One time ACH Account type: Saving or checking</description>
        <label>OT ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Bank_Name__c</fullName>
        <description>One time ACH Bank Name</description>
        <inlineHelpText>One time ACH Bank Name</inlineHelpText>
        <label>OT ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Debit_Date__c</fullName>
        <label>OT ACH Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address1__c</fullName>
        <description>One time ACH Drawer Address Line 1</description>
        <inlineHelpText>One time ACH Drawer Address Line 1</inlineHelpText>
        <label>OT ACH Drawer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address2__c</fullName>
        <description>One time ACH Drawer Address Line 2</description>
        <inlineHelpText>One time ACH Drawer Address Line 2</inlineHelpText>
        <label>OT ACH Drawer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_City__c</fullName>
        <description>One time ACH Drawer City</description>
        <inlineHelpText>One time ACH Drawer City</inlineHelpText>
        <label>OT ACH Drawer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Name__c</fullName>
        <description>One time ACH Drawer Name</description>
        <inlineHelpText>One time ACH Drawer Name</inlineHelpText>
        <label>OT ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_State__c</fullName>
        <description>One time ACH Drawer State</description>
        <inlineHelpText>One time ACH Drawer State</inlineHelpText>
        <label>OT ACH Drawer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Zip__c</fullName>
        <description>One time ACH Drawer Zip</description>
        <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
        <label>OT ACH Drawer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Fee_Amount__c</fullName>
        <description>One time ACH fee amount</description>
        <inlineHelpText>One time ACH fee amount</inlineHelpText>
        <label>OT ACH Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Payment_Amount__c</fullName>
        <description>One time ACH payment amount</description>
        <inlineHelpText>One time ACH payment amount</inlineHelpText>
        <label>OT ACH Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Relationship_Type__c</fullName>
        <description>One time ACH relationship type</description>
        <label>OT ACH Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2 Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Routing_Number__c</fullName>
        <description>One time ACH Routing number</description>
        <inlineHelpText>One time ACH Routing number</inlineHelpText>
        <label>OT ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Oldest_Due_Date__c</fullName>
        <label>Oldest Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Origin_Source__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <description>Origin Source of the loan account.</description>
        <label>Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Bill_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days before due date to have the bill generated.</description>
        <label>Pre Bill Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Paid_Interest_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pre_Paid_Interest_Paid_Till_Date__c</fullName>
        <inlineHelpText>Pre-Paid Interest Paid Till Date</inlineHelpText>
        <label>Pre Paid Interest Paid Till Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Method__c</fullName>
        <label>Prepayment Penalty Method</label>
        <picklist>
            <picklistValues>
                <fullName>% of Loan Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% of Loan Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% of Principal Remaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Penalty_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepayment Penalty Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Penalty_Periods__c</fullName>
        <label>Prepayment Penalty Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Prepayment_Value__c</fullName>
        <label>Prepayment Penalty Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal Paid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Product_Name__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Loan Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Change_Dt_Next__c</fullName>
        <label>Next Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Procedure__c</fullName>
        <label>Repayment Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Reserve_Amount_for_Next_Due__c</fullName>
        <inlineHelpText>Amount to be used to satisfy future dues.</inlineHelpText>
        <label>Reserve Amount for Next Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <description>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Record has been created in target system
Post-Import Valid - Post record creation validations completed
Error - Record is in error state</description>
        <inlineHelpText>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Target record created
Post-Import Valid - Post record creation validations completed
Error - Record in error</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Import</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Target_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Account Interfaces</relationshipLabel>
        <relationshipName>Loan_Account_Interfaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Term_Cur__c</fullName>
        <description>Current Term</description>
        <label>Current Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Time_Counting_Method__c</fullName>
        <label>Time Counting Method</label>
        <picklist>
            <picklistValues>
                <fullName>Month And Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Write_off_Tolerance_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Write off Tolerance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Account Interface</label>
    <nameField>
        <displayFormat>LI-{00000000}</displayFormat>
        <label>Loan Interface Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Account Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>